fixing alignment issues

--- a/app/assets/stylesheets/general.sass
+++ b/app/assets/stylesheets/general.sass
@@ -48,10 +48,5 @@ p, ol, ul, td
 .title-section
   position: relative
 
-.resources
-  position: absolute
-  right: 110px
-  width: 590px
-
 .comment-text-area
   width: 577px
